2006-09-28  Nicola Pero <nicola.pero@meta-innovation.com>

	'make install special_prefix=xxx' should be replaced by 'make
	install DESTDIR=xxx'.
	* GNUmakefile.in (DESTDIR): New variable that replaces
	special_prefix and complies with the GNU Coding Standards.
	(special_prefix): If a special_prefix is specified, use it
	but emit a warning that it is now deprecated.
	* gnustep-make.spec.in: Updated to use DESTDIR instead of
	special_prefix.
	
2006-09-25  Nicola Pero <nicola.pero@meta-innovation.com>

	* Master/source-distribution.make: Use TAR everywhere instead of
	hardcoded tar (Patch by BALATON Zoltan <balaton@eik.bme.hu>).

2006-09-20  Nicola Pero <nicola.pero@meta-innovation.com>

	By default compile everything with debug=yes.  To get the
	traditional behaviour, please use 'make debug=no'.
	* common.make (debug): Turn on debug by default.
	
2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Master/subproject.make (internal-distclean): Do nothing.
	(internal-clean): Remove 'Resources' directory on 'clean' too.
	* Master/tool.make (internal-distclean): Do nothing.
	(internal-clean): Removed 'Resources' directory on 'clean'.	

	* Instance/subproject.make (GNUSTEP_SHARED_BUNDLE_RESOURCE_PATH):
	Added GNUSTEP_BUILD_DIR.
	* Instance/tool.make (GNUSTEP_SHARED_BUNDLE_RESOURCE_PATH): Added
	GNUSTEP_BUILD_DIR.

	* Master/subproject.make (.PHONY): Removed build-headers.
	
2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Instance/framework.make (UPDATE_CURRENT_SYMLINK_RULE): Removed
	phone update-symlink-rule target that was being executed at every
	make, and replaced with a rule to build the symlink which is not
	executed if the symlink is there already.
	(.PHONY): Removed update-symlink-rule.

2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* Instance/framework.make: Removed warnings for
	CURRENT_VERSION_NAME and xxx_TOOLS that were removed 4 years ago.

2006-09-19  Nicola Pero <nicola.pero@meta-innovation.com>
